# Copa-2026-AI-Forecast

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.generated/: fifa.daily.forecast.json
.github/workflows/: daily-forecast.yml
.specify/: feature.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
configs/: example.forecast.json  fifa.real.forecast.json  source_registry.yaml
data/: README.md
docs/: architecture_analysis.md  linkedin_onepage.md  operations.md  sources.md  validation.md
docs/adr/: 0001-batch-python-static-pages-operation.md  README.md
public/: app.js  index.html  styles.css
public/data/: latest.json
scripts/: prepare_daily_config.py  verify_implementation.py  watch_and_verify.py
specs/001-copa-forecast/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-credibility-remediation/: plan.md  spec.md  tasks.md
specs/003-global-elo-prior/: plan.md  spec.md  tasks.md
src/copa_forecast/: __init__.py  cli.py  config.py  forecast.py  timeutils.py
tests/contract/: test_forecast_config.py
tests/fixtures/: latest_sample.json
tests/integration/: test_backtest.py  test_explain_cli.py  test_fifa_etl.py  test_forecast_run.py  test_simulation.py  test_static_site.py
tests/unit/: test_artifacts.py  test_calibration.py  test_countries.py  test_evaluation.py  test_explanations.py  test_fifa_parser.py  test_fifa_raw_store.py  test_forecast_strength.py  test_leakage.py  test_prior.py  (+9 more)
(+37 files in other folders)
